ContentDefinition & swagger
